deployments/kubernetes/scalable-single-cell/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ubeeq
  labels:
    app.kubernetes.io/part-of: ubeeq
