deployments/kubernetes/scalable-single-cell/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubeeq-api
spec:
  selector:
    app.kubernetes.io/name: ubeeq-api
  ports:
    - name: http
      port: 80
      targetPort: http
