deployments/kubernetes/scalable-single-cell/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ubeeq-api-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ubeeq-api
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 4100
